fix: add flex for alignement

--- a/packages/sources/css/src/components/button/src/index.css
+++ b/packages/sources/css/src/components/button/src/index.css
@@ -6,6 +6,9 @@
 
 /* Default button */
 .vtmn-btn {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
   box-shadow: inset 0 0 0 rem(2px) transparent;
   font-size: var(--vtmn-typo_text-2-font-size);
   height: rem(48px);
